# video_effects

./: .gitignore  CMakeLists.txt  LICENSE  README.md  filter.cpp  filter.h  vidDisplay.cpp
faceDetect/: faceDetect.h
